first design about me

--- a/about_me.html
+++ b/about_me.html
@@ -6,8 +6,8 @@
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <title>Sherine Foo Portfolio</title>
   <link rel="stylesheet" href="stylesheets/style.css">
+  <style>@import url('https://fonts.googleapis.com/css?family=Cabin|Monoton|Paytone+One|Aldrich|Cabin+Sketch');</style>
 
-  <script src="js/main.js"></script>
 </head>
 <body>
   <header>
@@ -22,82 +22,129 @@
 
     <main>
       <div class="container">
-        <h1>HI</h1>
-        <h2>I'M WEB DEVELOPER WITH CX & UX EXPERIENCE</h2>
-        <img id="profile_pic" src="images/me3 (1).jpg" alt="sherine">
+
+        <div class="wrapper-me-top">
+          <div class="nested-me-webdep">
+            <h2 id="what-me">I'M <br/>  WEB <br/>  DEVELOPER</h2>
+          </div>
+
+          <div class="nested-me-name">
+            <img id="profile_pic" src="images/me3 (1).jpg" alt="sherine">
+            <h1 id="my-name">SHERINE FOO</h1>
+          </div>
+          <div class="nested-me-exp">
+            <h2 id="what-me2">WITH <br/> CX & UX  <br/> EXPERIENCE</h2>
+          </div>
+
+        </div>
       </div>
 
       <div class="container">
-        <div class="Intro">
-          <h3>INTRO</h3>
-          <p>
-            Background in <span class="intro">Engineering</span> and started my career with <span class="intro">Project Engineer</span> in R&D company than moved to <span class="intro">Supplier Quality Engineer</span> in manufacturing industry in Penang, <span class="intro">Malaysia</span>. I than decided to move to <span class="intro">China</span> for <span>Customer Service</span> in construction industry and to transferred to <span class="intro">Sydney</span> to <span class="intro">
-            setup and manage the customer support center</span>. I have always been a <span class="intro">dreamer</span> and coding world can make my dream to reality. After 16 years, I decided to change my career by taking full time course in <span class="intro">Web Developer</span>. Having <span class="intro">Process Design</span> experience help me understand the logic of writing functional code. 10 years of Customer Service experience provide me an <span class="intro">empathy</span> mind with the customer, knowing what customer want and gaining their trust makes progress more <span class="intro">effective and higher customer satisfaction</span>. Did I mention I gain energy from learning?
-          </p>
-        </div>
+        <br><br><img class="scroll-icon bounce" src="images/arrow-white.png" alt="Scroll icon"/>
+      </div>
 
-        <div class="Skills">
-          <h3>MY SKILLS</h3>
-            <div class="skill_web">
-              <h4>Web Development</h4>
-                <ul>
-                  <li>Javascript</li>
-                  <li>jQuery</li>
-                  <li>Ruby and Rails</li>
-                  <li>Ruby</li>
-                  <li>PostgresQL</li>
-                  <li>AJAX</li>
-                  <li>P5.JS</li>
-                  <li>HTML/CSS/SCSS</li>
-                </ul>
+
+
+      <div class="container">
+
+        <div class="wrapper-me-bottom">
+
+          <div class="nested-me-intro">
+            <div class="Intro-div">
+              <h3>INTRO</h3>
+              <p>
+                Background in <span class="intro">Engineering</span> and started my career with <span class="intro">Project Engineer</span> in R&D company than moved to <span class="intro">Supplier Quality Engineer</span> in manufacturing industry in Penang, <span class="intro">Malaysia</span>. I than decided to move to <span class="intro">China</span> for <span>Customer Service</span> in construction industry and to transferred to <span class="intro">Sydney</span> to <span class="intro">
+setup and manage the customer support center</span>.
+                <br><br>
+                I have always been a <span class="intro">dreamer</span> and coding world can make my dream to reality. After 16 years, I decided to change my career by taking full time course in <span class="intro">Web Developer</span>.
+
+                <br><br>
+                Having <span class="intro">Process Design</span> experience help me understand the logic of writing functional code. 10 years of Customer Service experience provide me an <span class="intro">empathy</span> mind with the customer, knowing what customer want and gaining their trust makes progress more <span class="intro">effective and higher customer satisfaction</span>.
+                <br><br>
+                Did I mention I gain energy from learning?
+              </p>
             </div>
-
-            <div class="skill_soft">
-              <h4>Soft Skills</h4>
-                <ul>
-                  <li>Project Management</li>
-                  <li>Process Design</li>
-                  <li>Customer Requirement Identification</li>
-                  <li>Customer Management</li>
-                  <li>Team Management</li>
-                </ul>
-            </div>
-
-            <div class="skill_ux">
-              <h4>UX</h4>
-                <ul>
-                  <li>Competitor Research</li>
-                  <li>Afinity Map</li>
-                  <li>Persona</li>
-                  <li>User Journey Map</li>
-                  <li>User Flow</li>
-                  <li>Information Architecture</li>
-                  <li>Wireframe & Prototyping</li>
-                  <li>Usablility Test</li>
-                  <li>Mockup</li>
-                  <li>UI Design</li>
-                  <li>Sketch App</li>
-                  <li>Invision</li>
-                </ul>
-            </div>
-
-
-
             <div class="skill_adventure">
-              <h4>My Adventures</h4>
-                <ul>
+              <h3>My Adventures</h3>
+                <ul id="skills-ul">
                   <li>Walked 1000km in 31 days with minimum surviving equipment</li>
+                  <br>
                   <li>Sky Diving 14,000ft (Best experience in life ever!)</li>
+                  <br>
                   <li>Bungee Jump in world highest bungee jump</li>
                 </ul>
             </div>
+          </div>
+
+          <div class="wrapper-me-skills">
+            <div class="nested-skillsset-title">
+              <h3>MY SKILLS</h3>
+            </div>
+
+            <div class="wrapper-skillsset">
+              <div class="nested-skills-right">
+                <div class="skill_web">
+                  <h4>Web Development</h4>
+                    <ul id="skills-ul">
+                      <li>Javascript</li>
+                      <li>jQuery</li>
+                      <li>Ruby and Rails</li>
+                      <li>Ruby</li>
+                      <li>PostgresQL</li>
+                      <li>AJAX</li>
+                      <li>P5.JS</li>
+                      <li>HTML/CSS/SCSS</li>
+                    </ul>
+                </div>
+
+                <br>
+
+                <div class="skill_soft">
+                  <h4>Soft Skills</h4>
+                    <ul id="skills-ul">
+                      <li>Project Management</li>
+                      <li>Process Design</li>
+                      <li>Customer Requirement Identification</li>
+                      <li>Customer Management</li>
+                      <li>Team Management</li>
+                    </ul>
+                </div>
+              </div>
+
+              <div class="nested-skills-left">
+                <div class="skill_ux">
+                  <h4>UX</h4>
+                    <ul id="skills-ul">
+                      <li>Competitor Research</li>
+                      <li>Afinity Map</li>
+                      <li>Persona</li>
+                      <li>User Journey Map</li>
+                      <li>User Flow</li>
+                      <li>Information Architecture</li>
+                      <li>Wireframe & Prototyping</li>
+                      <li>Usablility Test</li>
+                      <li>Mockup</li>
+                      <li>UI Design</li>
+                      <li>Sketch App</li>
+                      <li>Invision</li>
+                    </ul>
+                </div>
+
+
+              </div>
+            </div>
+
+          </div>
         </div>
 
       </div>
+
+    </div>
 
 
     </main>
 
-
+    <script src= "js/jquery.js"></script>
+    <script src="js/main.js"></script>
 </body>
 </html>
