--- a/about_me.html
+++ b/about_me.html
@@ -143,8 +143,9 @@ setup and manage the customer support center</span>.
 
 
     </main>
-
     <script src= "js/jquery.js"></script>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.2/jquery.min.js"></script>
+    <script src="js/modality.jquery.min.js"></script>
     <script src="js/main.js"></script>
 </body>
 </html>
