--- a/index.html
+++ b/index.html
@@ -6,8 +6,7 @@
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <title>Sherine Foo Portfolio</title>
   <link rel="stylesheet" href="stylesheets/style.css">
-  <script src= "js/jquery.js"></script>
-  <script src="js/main.js"></script>
+
   <script src= "p5/p5.js"></script>
   <script src= "p5/addons/p5.dom.js"></script>
   <script src= "p5/addons/p5.sound.js"></script>
@@ -61,6 +60,8 @@
 
       </div>
     </main>
-
-</body>
+    <script src= "js/jquery.js"></script>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.2/jquery.min.js"></script>
+    <script src="js/modality.jquery.min.js"></script>
+    <script src="js/main.js"></script></body>
 </html>
