add my adventures and bouncing text

--- a/about_me.html
+++ b/about_me.html
@@ -43,46 +43,29 @@
         <br><br><img class="scroll-icon bounce" src="images/arrow-white.png" alt="Scroll icon"/>
       </div>
 
-
-
       <div class="container">
 
-        <div class="wrapper-me-bottom">
-
-          <div class="nested-me-intro">
-            <div class="Intro-div">
-              <h3>INTRO</h3>
-              <p>
-                Background in <span class="intro">Engineering</span> and started my career with <span class="intro">Project Engineer</span> in R&D company than moved to <span class="intro">Supplier Quality Engineer</span> in manufacturing industry in Penang, <span class="intro">Malaysia</span>. I than decided to move to <span class="intro">China</span> for <span>Customer Service</span> in construction industry and to transferred to <span class="intro">Sydney</span> to <span class="intro">
+        <div class="Intro-div" id="intro-screen">
+          <h3>INTRO</h3>
+          <p id="intro-p">
+            Background in <span class="intro">Engineering</span> and started my career with <span class="intro">Project Engineer</span> in R&D company than moved to <span class="intro">Supplier Quality Engineer</span> in manufacturing industry in Penang, <span class="intro">Malaysia</span>. I than decided to move to <span class="intro">China</span> for <span>Customer Service</span> in construction industry and to transferred to <span class="intro">Sydney</span> to <span class="intro">
 setup and manage the customer support center</span>.
-                <br><br>
-                I have always been a <span class="intro">dreamer</span> and coding world can make my dream to reality. After 16 years, I decided to change my career by taking full time course in <span class="intro">Web Developer</span>.
+            <br><br>
+            I have always been a <span class="intro">dreamer</span> and coding world can make my dream to reality. After 16 years, I decided to change my career by taking full time course in <span class="intro">Web Developer</span>.
 
-                <br><br>
-                Having <span class="intro">Process Design</span> experience help me understand the logic of writing functional code. 10 years of Customer Service experience provide me an <span class="intro">empathy</span> mind with the customer, knowing what customer want and gaining their trust makes progress more <span class="intro">effective and higher customer satisfaction</span>.
-                <br><br>
-                Did I mention I gain energy from learning?
-              </p>
-            </div>
-            <div class="skill_adventure">
-              <h3>My Adventures</h3>
-                <ul id="skills-ul">
-                  <li>Walked 1000km in 31 days with minimum surviving equipment</li>
-                  <br>
-                  <li>Sky Diving 14,000ft (Best experience in life ever!)</li>
-                  <br>
-                  <li>Bungee Jump in world highest bungee jump</li>
-                </ul>
-            </div>
-          </div>
+            <br><br>
+            Having <span class="intro">Process Design</span> experience help me understand the logic of writing functional code. 10 years of Customer Service experience provide me an <span class="intro">empathy</span> mind with the customer, knowing what customer want and gaining their trust makes progress more <span class="intro">effective and higher customer satisfaction</span>.
+            <br><br>
+            Did I mention I gain energy from learning?
+          </p>
+        </div>
 
           <div class="wrapper-me-skills">
             <div class="nested-skillsset-title">
               <h3>MY SKILLS</h3>
+              <hr>
             </div>
-
             <div class="wrapper-skillsset">
-              <div class="nested-skills-right">
                 <div class="skill_web">
                   <h4>Web Development</h4>
                     <ul id="skills-ul">
@@ -97,21 +80,6 @@ setup and manage the customer support center</span>.
                     </ul>
                 </div>
 
-                <br>
-
-                <div class="skill_soft">
-                  <h4>Soft Skills</h4>
-                    <ul id="skills-ul">
-                      <li>Project Management</li>
-                      <li>Process Design</li>
-                      <li>Customer Requirement Identification</li>
-                      <li>Customer Management</li>
-                      <li>Team Management</li>
-                    </ul>
-                </div>
-              </div>
-
-              <div class="nested-skills-left">
                 <div class="skill_ux">
                   <h4>UX</h4>
                     <ul id="skills-ul">
@@ -130,16 +98,42 @@ setup and manage the customer support center</span>.
                     </ul>
                 </div>
 
-
-              </div>
+                <div class="skill_soft">
+                  <h4>Soft Skills</h4>
+                    <ul id="skills-ul">
+                      <li>Project Management</li>
+                      <li>Process Design</li>
+                      <li>Customer Requirement Identification</li>
+                      <li>Customer Management</li>
+                      <li>Team Management</li>
+                    </ul>
+                </div>
             </div>
+          </div>
 
+          <div class="container">
+            <br><br><img class="scroll-icon2 bounce" src="images/arrow-white.png" alt="Scroll icon"/>
+          </div>
+
+
+          <div class="me-adventure">
+            <h3 id="adventure-h3">MY ADVENTURES</h3>
+            <p id="adventure-p">
+              Walked 1000kms in 31 days caring only necessity
+            </p>
+            <img src="images/ad-walk.JPG" alt="Camino Walk" class="ad-pic">
+            <p id="adventure-p">
+              Skydive from 14,000 ft
+            </p>
+            <img src="images/ad-skydive.JPG" alt="Skydive" class="ad-pic">
+            <p id="adventure-p">
+              Jump one of the highest bungee jump in the world 233m
+            </p>
+            <img src="images/ad-bungee.JPG" alt="Bungee Jump" class="ad-pic2">
           </div>
         </div>
 
-      </div>
 
-    </div>
 
 
     </main>
