--- a/work.html
+++ b/work.html
@@ -30,7 +30,7 @@
       <div class="container">
 
         <div id="gallery">
-          <h1>WEB DEVELOPER</h1>
+          <h1 class="animated bounce2">WEB DEVELOPER</h1>
 
           <div id="web-dev-projects">
 
@@ -146,10 +146,9 @@
 
           </div>
 
-          <hr>
 
           <div id="ux-projects">
-            <h1>UX</h1>
+            <h1 class="animated bounce2">UX</h1>
             <div class="wrapper">
 
               <div class="img-nest">
