correct spelling in adventure

--- a/about_me.html
+++ b/about_me.html
@@ -119,7 +119,7 @@ setup and manage the customer support center</span>.
           <div class="me-adventure">
             <h3 id="adventure-h3">MY ADVENTURES</h3>
             <p id="adventure-p">
-              Walked 1000kms in 31 days caring only necessity
+              Walked 1000kms in 31 days carrying only necessity
             </p>
             <img src="images/ad-walk.JPG" alt="Camino Walk" class="ad-pic">
             <p id="adventure-p">
