--- a/about_me.html
+++ b/about_me.html
@@ -125,11 +125,11 @@ setup and manage the customer support center</span>.
             <p id="adventure-p">
               Skydive from 14,000 ft
             </p>
-            <img src="images/ad-skydive.JPG" alt="Skydive" class="ad-pic">
+            <img src="images/ad-skydive.jpg" alt="Skydive" class="ad-pic">
             <p id="adventure-p">
               Jump one of the highest bungee jump in the world 233m
             </p>
-            <img src="images/ad-bungee.JPG" alt="Bungee Jump" class="ad-pic2">
+            <img src="images/ad-bungee.jpg" alt="Bungee Jump" class="ad-pic2">
           </div>
         </div>
 
