add starfield in work and move about-me suitable for mobile

--- a/index.html
+++ b/index.html
@@ -63,5 +63,6 @@
     <script src= "js/jquery.js"></script>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.2/jquery.min.js"></script>
     <script src="js/modality.jquery.min.js"></script>
-    <script src="js/main.js"></script></body>
+    <script src="js/main.js"></script>
+  </body>
 </html>
