--- a/work.html
+++ b/work.html
@@ -8,6 +8,10 @@
   <link rel="stylesheet" href="stylesheets/style.css">
   <link rel="stylesheet" href="stylesheets/modality.css" >
 
+  <script src= "p5/p5.js"></script>
+  <script src= "p5/addons/p5.dom.js"></script>
+  <script src= "p5/addons/p5.sound.js"></script>
+
   <!-- <link rel="stylesheet" href="node_modules/izimodal/css/iziModal.min.css">
   <link rel="stylesheet" href="node_modules/izimodal/css/iziModal.css"> -->
 
@@ -25,6 +29,7 @@
       </nav>
   </header>
 
+  <div id="canvas"></div>
 
     <main>
       <div class="container">
