--- a/about_me.html
+++ b/about_me.html
@@ -76,6 +76,8 @@ setup and manage the customer support center</span>.
                       <li>PostgresQL</li>
                       <li>AJAX</li>
                       <li>P5.JS</li>
+                      <li>Bootstrap</li>
+                      <li>SASS</li>
                       <li>HTML/CSS/SCSS</li>
                     </ul>
                 </div>
