--- a/about_me.html
+++ b/about_me.html
@@ -79,6 +79,8 @@ setup and manage the customer support center</span>.
                       <li>Bootstrap</li>
                       <li>SASS</li>
                       <li>HTML/CSS/SCSS</li>
+                      <li>Git</li>
+                      <li>Atom</li>
                     </ul>
                 </div>
 
