fix home page web-responsive

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 
     <div id="canvas"></div>
 
-    <main>
+    <main class="container">
       <div class="home-page">
         <div class="hello">
           <span class="home-text" id="home-He">He</span>
@@ -36,25 +36,33 @@
         <div class="home-name">
           <span class="home-text" id="home-sherine">SHERINE FOO</span>
           <br>
-          <span class="home-text" id="home-web-dev">WEB DEVELOPER</span>
+          <span class="home-text" id="home-web-dev">FRONT-END DEVELOPER</span>
           <br>
           <span class="home-text" id="home-cx-ux">with CX and UX Experience</span>
           <br>
-          <div class-bottom>
-            <a href="work.html" class="home-text" id="my-portfolio">MY PORTFOLIO</a>
+          <div class="bottom">
+            <div class="my-profile-btn">
+              <a href="work.html" class="home-text" id="my-portfolio">MY PORTFOLIO</a>
+            </div>
+            <div class="contact-icon-div">
+              <a href="mailto:sherinemay79@gmail.com?Subject=Hello%20Sherine" target="_top">
+                  <img src="./images/email.png" alt="Email" class="contact-icon">
+              </a>
+              <a href="https://www.linkedin.com/in/sherinefoo/" target="_blank">
+                  <img src="./images/linkedIn.png" alt="linkedIn" class="contact-icon">
+              </a>
+              <a href="https://github.com/DreamerMay" target="_blank">
+                  <img src="./images/github.png" alt="github" class="contact-icon">
+              </a>
+              <a href="https://twitter.com/sherine_may" target="_blank">
+                  <img src="./images/twitter.png" alt="twitter" class="contact-icon">
+              </a>
+              <a href="https://drive.google.com/open?id=1g1XXm_l_T0dCtLy_sgH3ORNdwUBqfHOm" target="_blank">
+                  <img src="./images/cv-icon.png" alt="resume" class="contact-icon">
+              </a>
 
-            <a href="https://twitter.com/sherine_may" target="_blank">
-                <img src="./images/twitter.png" alt="twitter" class="contact-icon">
-            </a>
-            <a href="https://github.com/DreamerMay" target="_blank">
-                <img src="./images/github.png" alt="github" class="contact-icon">
-            </a>
-            <a href="https://www.linkedin.com/in/sherinefoo/" target="_blank">
-                <img src="./images/linkedIn.png" alt="linkedIn" class="contact-icon">
-            </a>
-            <a href="mailto:sherinemay79@gmail.com?Subject=Hello%20Sherine" target="_top">
-                <img src="./images/email.png" alt="Email" class="contact-icon">
-            </a>
+
+            </div>
           </div>
         </div>
 
