--- a/work.html
+++ b/work.html
@@ -35,7 +35,7 @@
       <div class="container">
 
         <div id="gallery">
-          <h1 class="animated bounce2">WEB DEVELOPER</h1>
+          <h1 class="animated bounce2" id="work-h1">WEB DEVELOPER</h1>
 
           <div id="web-dev-projects">
 
@@ -54,7 +54,7 @@
                       <svg class="cross" viewBox="0 0 24 24"><path d="M19 6.41l-1.41-1.41-5.59 5.59-5.59-5.59-1.41 1.41 5.59 5.59-5.59 5.59 1.41 1.41 5.59-5.59 5.59 5.59 1.41-1.41-5.59-5.59z"/><path d="M0 0h24v24h-24z" fill="none"/></svg>
                     </a>
                     <h3 id="popup-h3">Audio Art</h3>
-                    <p>Audio Art <span class="code" href="https://github.com/DreamerMay/audio_art2" target="_blank">(view code)</span> is an app that generate visual art show by abstracting data from audio input.</p>
+                    <p><span class="code" href="https://github.com/DreamerMay/audio_art2" target="_blank">(view code)</span> <span class="code" href="https://github.com/DreamerMay/audio_art2" target="_blank">Audio Art </span> is an app that generate visual art show by abstracting data from audio input.</p>
                     <h3 id="popup-h3">Features</h3>
                       <ul>
                         <li class="popup-li">Ball dancing based on sound from microphone </li>
@@ -62,7 +62,7 @@
                         <li class="popup-li">Visual effect include box, particles dropping, Starfield and etc.</li>
                       </ul>
                   </div>
-                <a href="https://www.sherinefoo.com/audio_art2/" target="_blank" id="project-link" class="project-name"><span id="a">Audio Art</span><span id="b">Live Demo</span></a>
+                <a id="project-link" class="project-name">Audio Art</a>
               </div>
 
 
@@ -90,7 +90,7 @@
                       </ul>
                   </div>
 
-                <a href="https://todo-meetyou.herokuapp.com/" target="_blank" id="project-link" class="project-name"><span id="a">//TODO: Meet You &#10084;</span><span id="b">Live Demo</span></a>
+                <a href="https://todo-meetyou.herokuapp.com/" target="_blank" id="project-link" class="project-name">//TODO: Meet You &#10084;</a>
 
               </div>
 
@@ -120,7 +120,7 @@
                       </ul>
                   </div>
 
-                <a href="https://hidden-springs-69116.herokuapp.com/" target="_blank" id="project-link" class="project-name"><span id="a">Fashion Site</span><span id="b">Live Demo</span></a>
+                <a href="https://hidden-springs-69116.herokuapp.com/" target="_blank" id="project-link" class="project-name">Fashion Site</a>
               </div>
 
               <div class="img-nest">
@@ -144,7 +144,7 @@
                       </ul>
                   </div>
 
-                <a href="https://www.sherinefoo.com/tic-tac-toe/tic-tac-toe/" target="_blank" id="project-link" class="project-name"><span id="a">Tic Tac Toe</span><span id="b">Live Demo</span></a>
+                <a href="https://www.sherinefoo.com/tic-tac-toe/tic-tac-toe/" target="_blank" id="project-link" class="project-name">Tic Tac Toe</a>
               </div>
 
             </div>
@@ -153,7 +153,7 @@
 
 
           <div id="ux-projects">
-            <h1 class="animated bounce2">UX</h1>
+            <h1 class="animated bounce2" id="work-h1">UX</h1>
             <div class="wrapper">
 
               <div class="img-nest">
@@ -182,7 +182,7 @@
                       </ul>
                   </div>
 
-                <a href="https://drive.google.com/open?id=1urhxkcIsxIpRuFXrd-tSwfF0wXoYj0Ws" target="_blank" id="project-link" class="project-name"><span id="a">Know What To Eat</span><span id="b">Full Profile</span></a>
+                <a href="https://drive.google.com/open?id=1urhxkcIsxIpRuFXrd-tSwfF0wXoYj0Ws" target="_blank" id="project-link" class="project-name">Know What To Eat</a>
               </div>
 
 
@@ -210,7 +210,7 @@
                       </ul>
                   </div>
 
-                <a href="https://drive.google.com/open?id=1vwl0_H5hQE21eXkey4ipIjzJEiH2LLUm" target="_blank" id="project-link" class="project-name"><span id="a">Perfect Property</span><span id="b">Full Profile</span></a>
+                <a href="https://drive.google.com/open?id=1vwl0_H5hQE21eXkey4ipIjzJEiH2LLUm" target="_blank" id="project-link" class="project-name">Perfect Property</a>
               </div>
 
             </div>
@@ -238,7 +238,7 @@
                       </ul>
                   </div>
 
-                <a href="https://drive.google.com/open?id=1G9r-bY6N8--ZxBT4DzBPYImYihy-ebqe" target="_blank" id="project-link" class="project-name"><span id="a">Westfield</span><span id="b">Full Profile</span></a>
+                <a href="https://drive.google.com/open?id=1G9r-bY6N8--ZxBT4DzBPYImYihy-ebqe" target="_blank" id="project-link" class="project-name">Westfield</a>
               </div>
 
               <div class="img-nest">
@@ -262,7 +262,7 @@
                       </ul>
                   </div>
 
-                <a href="https://drive.google.com/open?id=1KkmO1Dvq0VU-wZBrZERKIg2CU_dvhiBI" target="_blank" id="project-link" class="project-name"><span id="a">Wordzer</span><span id="b">Full Profile</span></a>
+                <a href="https://drive.google.com/open?id=1KkmO1Dvq0VU-wZBrZERKIg2CU_dvhiBI" target="_blank" id="project-link" class="project-name">Wordzer</a>
               </div>
 
             </div>
