update about me web respond

--- a/about_me.html
+++ b/about_me.html
@@ -25,7 +25,7 @@
 
         <div class="wrapper-me-top">
           <div class="nested-me-webdep">
-            <h2 id="what-me">I'M <br/>  WEB <br/>  DEVELOPER</h2>
+            <h2 id="what-me">I'M <br/> FRONT-END <br/>  DEVELOPER</h2>
           </div>
 
           <div class="nested-me-name">
@@ -37,6 +37,23 @@
           </div>
 
         </div>
+      </div>
+      <div class="contact-icon-aboutme-div">
+        <a href="mailto:sherinemay79@gmail.com?Subject=Hello%20Sherine" target="_top">
+          <img src="./images/email.png" alt="Email" class="contact-icon-aboutme">
+        </a>
+        <a href="https://www.linkedin.com/in/sherinefoo/" target="_blank">
+            <img src="./images/linkedIn.png" alt="linkedIn" class="contact-icon-aboutme">
+        </a>
+        <a href="https://github.com/DreamerMay" target="_blank">
+            <img src="./images/github.png" alt="github" class="contact-icon-aboutme">
+        </a>
+        <a href="https://twitter.com/sherine_may" target="_blank">
+            <img src="./images/twitter.png" alt="twitter" class="contact-icon-aboutme">
+        </a>
+        <a href="https://drive.google.com/open?id=1g1XXm_l_T0dCtLy_sgH3ORNdwUBqfHOm" target="_blank">
+            <img src="./images/cv-icon.png" alt="resume" class="contact-icon-aboutme">
+        </a>
       </div>
 
       <div class="container">
