--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
         <br>
 
         <div class="home-name">
-          <span class="home-text" id="home-sherine">SHERINE FOO</span>
+          <span ><a href="about_me.html" class="home-text" id="home-sherine">SHERINE FOO</a></span>
           <br>
           <span class="home-text" id="home-web-dev">FRONT-END DEVELOPER</span>
           <br>
@@ -60,8 +60,6 @@
               <a href="https://drive.google.com/open?id=1g1XXm_l_T0dCtLy_sgH3ORNdwUBqfHOm" target="_blank">
                   <img src="./images/cv-icon.png" alt="resume" class="contact-icon">
               </a>
-
-
             </div>
           </div>
         </div>
