add react skill

--- a/about_me.html
+++ b/about_me.html
@@ -62,7 +62,7 @@
 
       <div class="container">
 
-        <div class="Intro-div" id="intro-screen">
+        <div class="intro-div" id="intro-screen">
           <h3>INTRO</h3>
           <p id="intro-p">
             Background in <span class="intro">Engineering</span> and started my career with <span class="intro">Project Engineer</span> in R&D company than moved to <span class="intro">Supplier Quality Engineer</span> in manufacturing industry in Penang, <span class="intro">Malaysia</span>. I than decided to move to <span class="intro">China</span> for <span>Customer Service</span> in construction industry and to transferred to <span class="intro">Sydney</span> to <span class="intro">
@@ -77,9 +77,14 @@ setup and manage the customer support center</span>.
           </p>
         </div>
 
+        <div class="container">
+          <br><br><img class="scroll-icon2 bounce" src="images/arrow-white.png" alt="Scroll icon"/>
+        </div>
+
+
           <div class="wrapper-me-skills">
             <div class="nested-skillsset-title">
-              <h3>MY SKILLS</h3>
+              <h3 id="my-skills-h3">MY SKILLS</h3>
               <hr>
             </div>
             <div class="wrapper-skillsset">
@@ -92,6 +97,7 @@ setup and manage the customer support center</span>.
                       <li>Ruby</li>
                       <li>PostgresQL</li>
                       <li>AJAX</li>
+                      <li>React</li>
                       <li>P5.JS</li>
                       <li>Bootstrap</li>
                       <li>SASS</li>
@@ -133,7 +139,7 @@ setup and manage the customer support center</span>.
           </div>
 
           <div class="container">
-            <br><br><img class="scroll-icon2 bounce" src="images/arrow-white.png" alt="Scroll icon"/>
+            <br><br><img class="scroll-icon3 bounce" src="images/arrow-white.png" alt="Scroll icon"/>
           </div>
 
 
