added progreSQL in fashion

--- a/work.html
+++ b/work.html
@@ -111,6 +111,7 @@
                       <div class ="project-skills">
                           <i class="devicon-ruby-plain-wordmark colored"></i>
                           <i class="devicon-rails-plain-wordmark colored"></i>
+                          <i class="devicon-postgresql-plain-wordmark colored"></i>
                           <i class="devicon-bootstrap-plain-wordmark colored"></i>
                           <i class="devicon-sass-original colored"></i>
                           <i class="devicon-html5-plain-wordmark colored"></i>
