add icon to tech skills and adjust spacing

--- a/about_me.html
+++ b/about_me.html
@@ -7,6 +7,7 @@
   <title>Sherine Foo Portfolio</title>
   <link rel="stylesheet" href="stylesheets/style.css">
   <style>@import url('https://fonts.googleapis.com/css?family=Cabin|Monoton|Paytone+One|Aldrich|Cabin+Sketch');</style>
+    <link rel="stylesheet" href="https://cdn.rawgit.com/konpa/devicon/df6431e323547add1b4cf45992913f15286456d3/devicon.min.css">
 
 </head>
 <body>
@@ -82,31 +83,35 @@ setup and manage the customer support center</span>.
         </div>
 
 
-          <div class="wrapper-me-skills">
-            <div class="nested-skillsset-title">
-              <h3 id="my-skills-h3">MY SKILLS</h3>
-              <hr>
-            </div>
-            <div class="wrapper-skillsset">
-                <div class="skill_web">
-                  <h4>Web Development</h4>
-                    <ul id="skills-ul">
-                      <li>Javascript</li>
-                      <li>jQuery</li>
-                      <li>Ruby and Rails</li>
-                      <li>Ruby</li>
-                      <li>PostgresQL</li>
-                      <li>AJAX</li>
-                      <li>React</li>
-                      <li>P5.JS</li>
-                      <li>Bootstrap</li>
-                      <li>SASS</li>
-                      <li>HTML/CSS/SCSS</li>
-                      <li>Git</li>
-                      <li>Atom</li>
-                    </ul>
-                </div>
+        <div class="nested-skillsset-title">
+          <h3 id="my-skills-h3">MY SKILLS</h3>
+        </div>
 
+        <div id="tech-skills">
+          <h4>Tech Skills</h4>
+
+          <div class ="project-skills-me">
+            <i class="devicon-javascript-plain colored "></i>
+            <i class="devicon-jquery-plain-wordmark colored"></i>
+            <i class="devicon-ruby-plain-wordmark colored"></i>
+            <i class="devicon-rails-plain-wordmark colored"></i>
+            <img src="./images/skill-p5.png" alt="p5" class="skill-icon">
+            <i class="devicon-bootstrap-plain-wordmark colored"></i>
+            <i class="devicon-sass-original colored"></i>
+            <i class="devicon-css3-plain-wordmark colored"></i>
+            <i class="devicon-html5-plain-wordmark colored"></i>
+            <i class="devicon-postgresql-plain-wordmark colored"></i>
+            <i class="devicon-react-original-wordmark colored"></i>
+            <i class="devicon-git-plain-wordmark colored"></i>
+            <i class="devicon-github-plain-wordmark"></i>
+            <i class="devicon-heroku-plain-wordmark colored"></i>
+            <i class="devicon-atom-original-wordmark"></i>
+            <i class="devicon-slack-plain-wordmark"></i>
+          </div>
+        </div>
+
+
+            <div class="wrapper-skillsset">
                 <div class="skill_ux">
                   <h4>UX</h4>
                     <ul id="skills-ul">
@@ -136,7 +141,6 @@ setup and manage the customer support center</span>.
                     </ul>
                 </div>
             </div>
-          </div>
 
           <div class="container">
             <br><br><img class="scroll-icon3 bounce" src="images/arrow-white.png" alt="Scroll icon"/>
@@ -146,7 +150,7 @@ setup and manage the customer support center</span>.
           <div class="me-adventure">
             <h3 id="adventure-h3">MY ADVENTURES</h3>
             <p id="adventure-p">
-              Walked 1000kms in 31 days carrying only necessity
+              Walked 1000KM in 31 days carrying only necessity
             </p>
             <img src="images/ad-walk.JPG" alt="Camino Walk" class="ad-pic">
             <p id="adventure-p">
