--- a/work.html
+++ b/work.html
@@ -73,7 +73,6 @@
                         <i class="devicon-jquery-plain-wordmark colored"></i>
                         <i class="devicon-css3-plain-wordmark colored"></i>
                         <i class="devicon-html5-plain-wordmark colored"></i>
-                        <br><br>
                     </div>
                   </div>
                 <a id="project-link" class="project-name">Audio Art</a>
@@ -115,7 +114,6 @@
                           <i class="devicon-bootstrap-plain-wordmark colored"></i>
                           <i class="devicon-sass-original colored"></i>
                           <i class="devicon-html5-plain-wordmark colored"></i>
-                          <br><br>
                           <i class="devicon-heroku-plain-wordmark colored"></i>
                       </div>
                   </div>
@@ -161,16 +159,14 @@
                                 <i class="devicon-ruby-plain-wordmark colored"></i>
                                 <i class="devicon-rails-plain-wordmark colored"></i>
                                 <i class="devicon-postgresql-plain-wordmark colored"></i>
-                                <br><br>
                                 <i class="devicon-sass-original colored"></i>
                                 <i class="devicon-html5-plain-wordmark colored"></i>
                                 <i class="devicon-heroku-plain-wordmark colored"></i>
-                                <img src="./images/skill-ajax2.png" alt="p5" class="skill-icon">
-                                <img src="./images/skill-slick.png" alt="p5" class="skill-icon">
-                                <br><br>
-                                <img src="./images/skill-cloudinary.png" alt="p5" class="skill-icon">
-                                <img src="./images/skill-googlemaps.png" alt="p5" class="skill-icon">
-                                <img src="./images/skill-trivia.png" alt="p5" class="skill-icon-trivia">
+                                <img src="./images/skill-ajax2.png" alt="ajax2" class="skill-icon">
+                                <img src="./images/skill-slick.png" alt="slick" class="skill-icon">
+                                <img src="./images/skill-cloudinary.png" alt="cloudinary" class="skill-icon">
+                                <img src="./images/skill-googlemaps.png" alt="google map api" class="skill-icon">
+                                <img src="./images/skill-trivia.png" alt="trivia" class="skill-icon-trivia">
                               </div>
                           </div>
                     <a id="project-link" class="project-name">//TODO: Meet You &#10084;</a>
