add invision and sketch skills icon, adjust line-height softskills

--- a/about_me.html
+++ b/about_me.html
@@ -107,6 +107,9 @@ setup and manage the customer support center</span>.
             <i class="devicon-heroku-plain-wordmark colored"></i>
             <i class="devicon-atom-original-wordmark"></i>
             <i class="devicon-slack-plain-wordmark"></i>
+            <img src="./images/skill-sketch.png" alt="p5" class="skill-icon">
+            <img src="./images/skill-invision2.png" alt="p5" class="skill-icon">
+
           </div>
         </div>
 
@@ -125,8 +128,6 @@ setup and manage the customer support center</span>.
                       <li>Usablility Test</li>
                       <li>Mockup</li>
                       <li>UI Design</li>
-                      <li>Sketch App</li>
-                      <li>Invision</li>
                     </ul>
                 </div>
 
